--- a/LINQPadOData4.csproj
+++ b/LINQPadOData4.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="OData4DynamicDriver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\PasswordBehavior.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
