--- a/packages.config
+++ b/packages.config
@@ -4,8 +4,8 @@
   <package id="Microsoft.OData.Core" version="6.15.0" targetFramework="net452" />
   <package id="Microsoft.OData.Edm" version="6.15.0" targetFramework="net452" />
   <package id="Microsoft.Spatial" version="6.15.0" targetFramework="net452" />
-  <package id="Microsoft.VisualStudio.TextTemplating.14.0" version="14.1.24720" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.TextTemplating.14.0" version="14.3.25407" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.TextTemplating.Interfaces.10.0" version="10.0.30319" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.TextTemplating.Interfaces.11.0" version="11.0.50727" targetFramework="net452" />
-  <package id="MSBuildTasks" version="1.4.0.128" targetFramework="net452" />
+  <package id="MSBuildTasks" version="1.5.0.196" targetFramework="net452" developmentDependency="true" />
 </packages>
