--- a/packages.config
+++ b/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.OData.Client" version="6.15.0" targetFramework="net452" />
-  <package id="Microsoft.OData.Core" version="6.15.0" targetFramework="net452" />
-  <package id="Microsoft.OData.Edm" version="6.15.0" targetFramework="net452" />
-  <package id="Microsoft.Spatial" version="6.15.0" targetFramework="net452" />
+  <package id="Microsoft.OData.Client" version="7.0.0-Nightly20170115" targetFramework="net452" />
+  <package id="Microsoft.OData.Core" version="7.0.0-Nightly20170115" targetFramework="net452" />
+  <package id="Microsoft.OData.Edm" version="7.0.0-Nightly20170115" targetFramework="net452" />
+  <package id="Microsoft.Spatial" version="7.0.0-Nightly20170115" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.TextTemplating.14.0" version="14.3.25407" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.TextTemplating.Interfaces.10.0" version="10.0.30319" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.TextTemplating.Interfaces.11.0" version="11.0.50727" targetFramework="net452" />
-  <package id="MSBuildTasks" version="1.5.0.196" targetFramework="net452" developmentDependency="true" />
+  <package id="MSBuildTasks" version="1.5.0.214" targetFramework="net452" developmentDependency="true" />
 </packages>
