--- a/OData4.LINQPadDriver.csproj
+++ b/OData4.LINQPadDriver.csproj
@@ -6,6 +6,7 @@
 		<AssemblyName>OData4.LINQPadDriver</AssemblyName>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageTags>linqpaddriver</PackageTags>
+		<EnableWindowsTargeting>true</EnableWindowsTargeting>
 		<LangVersion>8.0</LangVersion>
 	</PropertyGroup>
 
@@ -16,16 +17,14 @@
 		<Product>OData v4 Driver</Product>
 		<Title>OData v4 Driver</Title>
 		<Copyright>Copyright © Dmitrii Smirnov</Copyright>
-		<Version>2.0.0</Version>
-		<AssemblyVersion>2.0.0.0</AssemblyVersion>
-		<FileVersion>2.0.0.0</FileVersion>
+		<Version>2.1.0</Version>
+		<AssemblyVersion>2.1.0.0</AssemblyVersion>
+		<FileVersion>2.1.0.0</FileVersion>
 		<PackageLicenseFile>LICENSE.md</PackageLicenseFile>
 		<PackageProjectUrl>https://github.com/meancrazy/LINQPadOData4</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/meancrazy/LINQPadOData4.git</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<Authors>Dmitrii Smirnov</Authors>
-		<IncludeSymbols>True</IncludeSymbols>
-		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -36,10 +35,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Azure.Identity" Version="1.8.2" />
 		<PackageReference Include="LINQPad.Reference" Version="1.*" />
 		<PackageReference Include="Microsoft.OData.Client" Version="7.6.4" />
-		<PackageReference Include="Microsoft.VisualStudio.TextTemplating.15.0" Version="16.6.30107.105" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.7.0-1.final" />
+		<PackageReference Include="Microsoft.VisualStudio.TextTemplating.15.0" Version="16.10.31320.204" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -70,8 +70,7 @@
 	</ItemGroup>
 
 	<Target Name="PostBuild1" AfterTargets="PostBuildEvent">
-		<Exec
-			Command="xcopy /i/y/s &quot;$(TargetDir)*.*&quot; &quot;%25LocalAppData%25\\LINQPad\\Drivers\\DataContext\\NetCore\\$(TargetName)&quot;" />
+		<Exec Command="xcopy /i/y/s &quot;$(TargetDir)*.*&quot; &quot;%25LocalAppData%25\\LINQPad\\Drivers\\DataContext\\NetCore\\$(TargetName)&quot;" />
 	</Target>
 
 </Project>
